fix makefile for library creation, test program for chars

--- a/pa2/makefile
+++ b/pa2/makefile
@@ -4,11 +4,17 @@ COMPILE = $(CC) $(CFLAGS)
 
 all: libsl.a sl
 
-libsl.a: main.o
-	ar -rv libsl.a main.o
+libsl.a: sorted-list.o
+	ar -rv libsl.a sorted-list.o
 
-sl: main.c sorted-list.c sorted-list.h
-	$(COMPILE) -o sl main.c sorted-list.c sorted-list.h 
+sl: main.o sorted-list.o
+	$(COMPILE) -o sl main.o sorted-list.o
+
+main.o: main.c sorted-list.c sorted-list.h
+	$(COMPILE) -c main.c sorted-list.c
+
+sorted-list.o: sorted-list.c sorted-list.h
+	$(COMPILE) -c sorted-list.c
 
 clean:
 	rm -rf *.o sl main.o
